Coordinators methods for API
